fix site footer and layout issues

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+/* :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
@@ -14,20 +14,30 @@
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
   }
-}
+} */
 
+html,
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  padding: 0;
+  margin: 0;
+  min-height: 100vh;
+  min-height: calc(100vh - env(safe-area-inset-bottom));
+  background-color: var(--color-bg);
+  display: flex;
+  flex-direction: column;
 }
 
 a {
   color: inherit;
+}
+
+p {
+  font-size: 1.125rem;
+  font-weight: 250;
+}
+
+p:first-of-type {
+  margin-block-start: 0;
 }
 
 @layer components {
